deploy/local-k8s/minio.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: bitnami/minio
          ports:
            - containerPort: 9000
              name: http
            - containerPort: 9001
              name: console
          volumeMounts:
            - mountPath: /data
              name: data # Corresponds to the `spec.volumes` Persistent Volume
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
spec:
  selector:
    app: minio
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  labels:
    app: minio
spec:
  selector:
    app: minio
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9001
